--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -9,11 +9,8 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="TCCMadeireira.Properties.Settings.MadereiraConnectionString"
-            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
         <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
-            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True"
+            connectionString="Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
@@ -37,7 +34,7 @@
                 <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;Integrated Security=True</value>
             </setting>
             <setting name="ServerName" serializeAs="String">
-                <value>desktop-fqa</value>
+                <value>note-fqa</value>
             </setting>
             <setting name="DBName" serializeAs="String">
                 <value>Madeireira</value>
@@ -56,13 +53,13 @@
     <userSettings>
         <TCCMadeireira.Properties.Settings>
             <setting name="idUsuario" serializeAs="String">
-                <value>0</value>
+                <value>-1</value>
             </setting>
             <setting name="nomeUsuario" serializeAs="String">
-                <value>USER</value>
+                <value />
             </setting>
             <setting name="nivelUsuario" serializeAs="String">
-                <value>STANDARD</value>
+                <value />
             </setting>
         </TCCMadeireira.Properties.Settings>
     </userSettings>
