--- a/TCCMadeireira/Properties/Settings.settings
+++ b/TCCMadeireira/Properties/Settings.settings
@@ -2,21 +2,13 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TCCMadeireira.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="MadereiraConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madereira;Integrated Security=True</Value>
-    </Setting>
     <Setting Name="MadeireiraConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</Value>
     </Setting>
     <Setting Name="EscolaConnectionString" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</Value>
@@ -34,16 +26,16 @@
       <Value Profile="(Default)">Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;Integrated Security=True</Value>
     </Setting>
     <Setting Name="idUsuario" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">0</Value>
+      <Value Profile="(Default)">-1</Value>
     </Setting>
     <Setting Name="nomeUsuario" Type="System.String" Scope="User">
-      <Value Profile="(Default)">USER</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="nivelUsuario" Type="System.String" Scope="User">
-      <Value Profile="(Default)">STANDARD</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ServerName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">desktop-fqa</Value>
+      <Value Profile="(Default)">note-fqa</Value>
     </Setting>
     <Setting Name="DBName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Madeireira</Value>
