--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -10,7 +10,7 @@
     </configSections>
     <connectionStrings>
         <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
-            connectionString="Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435"
+            connectionString="Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=FQA;Password=Otavio@435"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
@@ -40,7 +40,7 @@
                 <value>Madeireira</value>
             </setting>
             <setting name="LoginServer" serializeAs="String">
-                <value>Otavio</value>
+                <value>FQA</value>
             </setting>
             <setting name="PwdServer" serializeAs="String">
                 <value>Otavio@435</value>
