--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -9,7 +9,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString" connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True" providerName="System.Data.SqlClient" />
+        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
+            connectionString="Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=FQA;Password=Otavio@435"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -32,13 +34,13 @@
                 <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=FQA;Password=Otavio@435</value>
             </setting>
             <setting name="ServerName" serializeAs="String">
-                <value>desktop-fqa</value>
+                <value>note-fqa</value>
             </setting>
             <setting name="DBName" serializeAs="String">
                 <value>Madeireira</value>
             </setting>
             <setting name="LoginServer" serializeAs="String">
-                <value>Otavio</value>
+                <value>FQA</value>
             </setting>
             <setting name="PwdServer" serializeAs="String">
                 <value>Otavio@435</value>
